Minor bugs with overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -74,7 +74,7 @@ ul {
 }
 
 li {
-  padding-top:7%;
+  padding-bottom: 5%;
   width: 87%;
   text-align: left;
   font-family: $body-font; 
@@ -83,6 +83,8 @@ li {
 }
 
 li:nth-child(odd) {
+  padding-top: 2%;
+  padding-bottom: none;
   text-align: right; 
   padding-left: 12%;
 }
